Increase z-index for fixed orange nav

--- a/src/sass/partials/_orange-nav.sass
+++ b/src/sass/partials/_orange-nav.sass
@@ -9,6 +9,7 @@
 	&.fixed-top
 		position: fixed
 		top: 0
+		z-index: 9
 
 		.fixed-nav__logos
 			top: 0
